more implementation and supporting docker scripts

--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -4,6 +4,7 @@ quarkus.http.port=8091
 # key = value
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.jdbc.url=jdbc:postgresql://order-db:5432/orderdb?currentSchema=inventory
+#quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5433/orderdb?currentSchema=inventory
 quarkus.datasource.username=postgresuser
 quarkus.datasource.password=postgrespw
 quarkus.hibernate-orm.database.generation=drop-and-create
@@ -32,7 +33,7 @@ quarkus.hibernate-orm.log.sql=true
 # quarkus.debezium-outbox.payload.converter=com.company.JsonbConverter
 
 # Runtime configuration:
-# quarkus.debezium-outbox.remove-after-insert=false
+#quarkus.debezium-outbox.remove-after-insert=false
 
 # Tracing configuration
 quarkus.jaeger.service-name=order-service
