--- a/shipment-service/src/main/resources/application.properties
+++ b/shipment-service/src/main/resources/application.properties
@@ -2,6 +2,7 @@ quarkus.http.port=8092
 
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.jdbc.url=jdbc:postgresql://shipment-db:5432/shipmentdb?currentSchema=inventory
+#quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5434/shipmentdb?currentSchema=inventory
 quarkus.datasource.username=postgresuser
 quarkus.datasource.password=postgrespw
 quarkus.hibernate-orm.database.generation=drop-and-create
@@ -10,6 +11,7 @@ quarkus.hibernate-orm.log.sql=true
 
 mp.messaging.incoming.orders.connector=smallrye-kafka
 mp.messaging.incoming.orders.topic=Order.events
+#mp.messaging.incoming.orders.bootstrap.servers=localhost:9092
 mp.messaging.incoming.orders.bootstrap.servers=kafka:9092
 mp.messaging.incoming.orders.group.id=shipment-service
 mp.messaging.incoming.orders.key.deserializer=org.apache.kafka.common.serialization.StringDeserializer
